Fix frontpage carousel layout shift

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,33 @@
   margin: 0 auto;
 }
 
+.service-bar{
+  max-height: 50px;
+}
+
+.banner-section{
+  height: 300px;
+  max-height: 300px;
+}
+
 // SERVICE CAROUSEL CSS - START
+#service-carousel {
+  visibility: hidden;
+  opacity: 0; /* Start with opacity set to 0 */
+  animation: fadeIn 1s ease-out 1s forwards; /* 1s delay before fading in */
+}
+
+@keyframes fadeIn {
+  to {
+    visibility: visible;
+    opacity: 1; /* Fade in */
+  }
+}
+
+.service-bar-carousel {
+  max-height: 50px ;
+}
+
 .service-block {
   
 
